<resources>
    <string name="app_name">CrimeIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title:</string>
    <string name="crime_date">Crime Date:</string>
    <string name="contact_police">Contact Police</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="ok">OK</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="subtitle_singular_format">1 crime</string>
    <string name="subtitle_plural_format">%1$d crimes</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="no_crimes">There are no crimes</string>
    <string name="create_table">create table</string>
    <string name="date">Input date</string>
    <string name="time">Input time</string>
    <string name="todo">TODO</string>
    <string name="jumpFirst">Jump to First</string>
    <string name="jumpLast">Jump to Last</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$s crime</item>
        <item quantity="other">%1$s crimes</item>
    </plurals>
</resources>