<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#AFA1C8">
    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fafafa"
        android:hint="@string/crime_title_hint"/>
    <TextView
        android:textColor="#fafafa"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"/>
    <Button
        android:textColor="#fafafa"
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:background="#6750A3"/>
    <Button
        android:layout_marginTop="3dp"
        android:textColor="#fafafa"
        android:id="@+id/crime_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:background="#6750A3" />
    <CheckBox
        android:textColor="#fafafa"
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"/>
    <CheckBox
        android:textColor="#fafafa"
        android:id="@+id/crime_requires_police"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_police"/>
</LinearLayout>